Use pseudo scm version in tools docker test image.

--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.10.9
 
+ARG PSEUDO_VERSION=1
+
 RUN apt-get update
 RUN apt-get install ffmpeg libsm6 libxext6 libegl1-mesa libegl1 -y
 
@@ -9,4 +11,4 @@ ENV ROOT /tools
 WORKDIR ${ROOT}
 COPY . ${ROOT}
 
-RUN pip install .[test]
+RUN SETUPTOOLS_SCM_PRETEND_VERSION=${PSEUDO_VERSION} pip install .[test]
