Run clang-format in ci pipeline.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -34,6 +34,9 @@ jobs:
         name: Install tools & unit test
         run: make -C ./tools
       -
+        name: Run clang-format in raspi
+        run: make -C ./raspi -f Makefile_clang clang-format
+      -
         name: Compile (host) raspi & unit test
         run: make -C ./raspi -f Makefile_tests
       -
