--- a/raspi/Makefile_tests
+++ b/raspi/Makefile_tests
@@ -58,11 +58,13 @@ clang_format: build_image
 	docker run -v ${RASPI_ROOT}:${IMAGE_ROOT} \
 		--user $(UID):$(GID) \
 		${IMAGE_NAME} \
+		bash -c " \
 		find ./tests -type f -iname "*.cpp" -o -iname "*.hpp" | xargs \
 		clang-format \
         -style=file \
         --Werror \
-        --dry-run
+        --dry-run \
+		"
 
 clang_tidy: build_image
 	docker run -v ${RASPI_ROOT}:${IMAGE_ROOT} \
