--- a/raspi/Makefile_dpkg
+++ b/raspi/Makefile_dpkg
@@ -78,7 +78,12 @@ clang_tidy: build_image
 		-v ${RASPI_ROOT}:${IMAGE_ROOT} \
 		--user $(UID):$(GID) \
 		${IMAGE_NAME} \
-		echo "TODO"
+		bash -c " \
+		clang-tidy \
+		./inc/*.hpp ./src/*.cpp -- \
+		-isystem ./lib -I ./inc \
+		-Wall -Werror -Wno-psabi -std=c++17 -pthread -MD \
+		"
 
 clean:
 	docker run  --platform linux/arm/v7 \
