--- a/raspi/Dockerfile
+++ b/raspi/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:bullseye
+FROM debian:bullseye AS builder
 
 ARG IMAGE_ROOT
 ENV ROOT ${IMAGE_ROOT}
@@ -9,6 +9,9 @@ RUN apt-get install -y \
     libz-dev \
     libi2c-dev \
     build-essential \
-    libzmq3-dev \
+    libzmq3-dev
+
+FROM builder as clang
+RUN apt-get install -y \
     clang-format \
     clang-tidy
