--- a/raspi/Makefile_clang
+++ b/raspi/Makefile_clang
@@ -14,6 +14,7 @@ IMAGE_NAME = raspi:host
 
 build_image:
 	docker build -t ${IMAGE_NAME} \
+		--target clang \
 		--build-arg IMAGE_ROOT=${IMAGE_ROOT} \
 		.
 
