--- a/tools/pyproject.toml
+++ b/tools/pyproject.toml
@@ -4,18 +4,18 @@ description = "The Ugglan development tools"
 dynamic = ["version"]
 requires-python = ">=3.9"
 dependencies = [
-    "matplotlib",
-    "numpy",
-    "pandas",
-    "scipy",
-    "pyqtgraph",
-    "PyQt6",
-    "PyOpenGL",
-    "inputs",
-    "sympy",
-    "zmq",
-    "plotly",
-    "dash"
+    "matplotlib==3.7.1",
+    "numpy==1.24.3",
+    "pandas==2.0.2",
+    "scipy==1.10.1",
+    "pyqtgraph==0.13.3",
+    "PyQt6==6.4.1",
+    "PyOpenGL==3.1.6",
+    "inputs==0.5",
+    "sympy==1.12",
+    "pyzmq==25.1.0",
+    "plotly==5.15.0",
+    "dash==2.10.2"
 ]
 
 [build-system]
@@ -38,7 +38,7 @@ gui-streamer = "ugglan_tools.streamer.gui:main"
 
 [project.optional-dependencies]
 test = [
-    "pytest"
+    "pytest==7.3.2"
 ]
 
 [tool.setuptools_scm]
